--- a/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/layout/activity_control.xml
+++ b/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/layout/activity_control.xml
@@ -11,9 +11,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Gaunami galimi nustatymai"
-        android:textColor="#212121"
-        android:textSize="15sp"/>
+        android:text="Prietaiso nustatymai"
+        android:textColor="#FFFFFF"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/textDeviceName"
@@ -46,23 +46,21 @@
         android:visibility="visible" />
 
     <Switch
-        android:id="@+id/switch_inside"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/location_house"
-        tools:checked="false" />
-
-    <Switch
-        android:id="@+id/switch_outside"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/location_outside" />
-
-    <Switch
-        android:id="@+id/sleep_time"
+        android:id="@+id/silent_time"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/silent_hours" />
+
+    <TextView
+        android:id="@+id/rangeSetView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        tools:text="@string/rangeSetText" />
+    <SeekBar
+        android:id="@+id/rangeSet"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" />
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
@@ -72,14 +70,15 @@
             android:id="@+id/findDevice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:background="@color/colorPrimaryDark"
+            android:layout_marginTop="244dp"
+            android:background="@drawable/button_pink"
             android:gravity="center"
             android:text="@string/findDevice"
             android:textColor="#ffffff"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
     </android.support.constraint.ConstraintLayout>
 
 
