--- a/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/layout/activity_control.xml
+++ b/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/layout/activity_control.xml
@@ -36,15 +36,6 @@
         android:textSize="20sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/device_rssi"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/rssi_begin"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:visibility="visible" />
-
     <Switch
         android:id="@+id/silent_time"
         android:layout_width="match_parent"
@@ -59,6 +50,7 @@
         tools:text="@string/rangeSetText" />
     <SeekBar
         android:id="@+id/rangeSet"
+        android:layout_marginTop="10dp"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
@@ -66,11 +58,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/device_rssi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="104dp"
+            android:gravity="center"
+            android:text="@string/rssi_begin"
+            android:textSize="20sp"
+            android:textStyle="italic"
+            android:visibility="visible"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <Button
             android:id="@+id/findDevice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="244dp"
+            android:layout_marginTop="260dp"
             android:background="@drawable/button_pink"
             android:gravity="center"
             android:text="@string/findDevice"
@@ -78,6 +84,17 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/batteryLevelButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:background="@null"
+            android:text="@string/bateryLevel"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 
