Added Gaussian filter to sort RSSI values. Added RSSI to distance formula. Added Manual Calibration Option. Now the amazing tweaking begins

--- a/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/layout/activity_control.xml
+++ b/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/layout/activity_control.xml
@@ -73,6 +73,18 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
+            android:id="@+id/autoCalibration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="52dp"
+            android:background="@null"
+            android:text="@string/calibration"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.061"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
+        <Button
             android:id="@+id/findDevice"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -89,10 +101,11 @@
             android:id="@+id/batteryLevelButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="52dp"
             android:background="@null"
             android:text="@string/bateryLevel"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintHorizontal_bias="0.939"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
 
