--- a/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/values/colors.xml
+++ b/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0D47A1</color>
     <color name="colorAccent">#CC527A</color>
     <color name="load_bar">#0097a7</color>
+    <color name="bg_color">#2c3e50</color>
 </resources>
