--- a/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/values/styles.xml
+++ b/AndroidStudioProjects/ADVSPVOL3/app/src/main/res/values/styles.xml
@@ -2,11 +2,11 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="android:Theme.Material.NoActionBar">
-
+        <item name="android:windowBackground">@color/bg_color</item>
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorAccent">#fd9601</item>
     </style>
 
 </resources>
